--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -191,14 +191,82 @@ Note: Beware of modifying this element as it can break the animations - you shou
 }
 div.menu-item div{
     display:flex;
-    justify-content: center;
+    justify-content: space-around;
     padding: 10px 0;
+    
 }
 
-div.menu-item div button{
-    margin:15px;
-    width: 40%;
+.menu-item button.login{
+    background: url('../../img/signup_button_bg.png') no-repeat center;
+    background-size: contain;
+    font-family: Poppins;
+    font-style: normal;
+    font-weight: 500;
+    font-size: 18px;
+    line-height: 18px;
+    color: #111022;
+    cursor: pointer;
+    transition: 0.4s;
+    position: relative;
+    height: 50px;
+    width: 150px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
+
+.menu-item button.login span{
+    position: relative;
+    z-index: 1;
+    transition: 0.4s;
+}
+
+.menu-item button.login:hover span{
+    transition: 0.4s;
+    color: #fff;
+}
+
+.menu-item button.login::before{
+    content: '';
+    width: 100%;
+    height: 100%;
+    left: 0;
+    top: 0;
+    position: absolute;
+    background: url('../../img/learn_more_button_bg.png') no-repeat center;
+    background-size: contain;
+    transition: 0.4s;
+    opacity: 0;
+}
+
+
+.menu-item button.login:hover::before{
+    opacity: 1;
+    transition: 0.4s;
+}
+
+
+.mobile_switch {
+  cursor: pointer;
+  display: none;
+}
+.mobile_search{
+  cursor: pointer;
+  display: none;
+}
+
+.mobile_switch img, .mobile_search img{
+  width: 30px;
+}
+
+
+
+.dark .menu-item button.login{
+    color: #fff;
+    transition: 0.4s;
+}
+
+
 
 div.menu-item div button:nth-child(2){
     color: #0075FF;
@@ -209,12 +277,73 @@ font-family: Poppins;
 font-style: normal;
 font-weight: bold;
 font-size: 22px;
-text-align: center;
-color: #0075FF;
+text-align: left;
+color: #000000;
 outline: none;
 text-decoration: none;
-padding: 5px 0;
+padding: 5px 0 5px 10%;
 }
+
+
+.dark a.bm-item {
+  color: #fff;
+}
+.soc_header_mobile{
+  border-top: 2px solid #676767;
+  margin-top: 10px;
+}
+
+.menu-item button{
+    background: url('../../img/learn_more_button_bg.png') no-repeat center;
+    background-size: contain;
+    font-family: Poppins;
+    font-style: normal;
+    font-weight: 500;
+    font-size: 18px;
+    line-height: 18px;
+    color: #FFFFFF;
+    cursor: pointer;
+    position: relative;
+    transition: 0.4s;
+    height: 50px;
+    width: 150px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border: none;
+    outline: none;
+}
+
+.menu-item button:hover{
+    background: transparent;
+    transition: 0.4s;
+}
+.menu-item button:hover span{
+    transition: 0.4s;
+    color: #111022;
+}
+
+.dark .menu-item button:hover span{
+    transition: 0.4s;
+    color: #fff;
+}
+
+.menu-item button::before {
+    content: '';
+    background: url('../../img/signup_button_bg.png') no-repeat center;
+    background-size: contain;
+    width: 100%;
+    height: 100%;
+    transition: 0.4s;
+    position: absolute;
+    opacity: 0;
+}
+
+.menu-item button:hover::before{
+    opacity: 1;
+    transition: 0.4s;
+}
+
 
 div.menu-item .soc_header_mobile{
     display: flex;
@@ -287,15 +416,34 @@ div.menu-item .soc_header_mobile{
 
 
 @media (max-width: 991.98px) {
+
+  .mobile_switch {
+    display: block;
+    margin-right: 70px
+  }
+  .mobile_search {
+    display: block;
+  }
   .header_right_menu, .header_left_menu{
       display: none;
   }
 
   .header_search {
-      display: none;
+      
+      position: absolute;
+     bottom: -100vh;
+    left: 38%;
+    transition: 0.4s;
+    opacity: 0;
   }
   .bm-burger-button{
       display: block;
+  }
+  .header_search.active{
+    display: block;
+    transition: 0.4s;
+    opacity: 1;
+    bottom: -40px;
   }
   .mobile_search.header_search{
       display: block;
