--- a/src/components/Team/Team.css
+++ b/src/components/Team/Team.css
@@ -101,19 +101,43 @@
 
 
 .team .slick-next{
+    background: transparent;
+    background-position: 0 -100px;
+    transition: 0.4s;
+    background-size: cover;
+    width: 40px;
+    height: 40px;
+    z-index: 1;
+}
+
+.team .slick-next:hover{
     background: url('../../img/next-arrow.png') no-repeat center;
+    transition: 0.4s;
     background-size: cover;
     width: 40px;
     height: 40px;
     z-index: 1;
 }
 .team .slick-prev{
-    background: url('../../img/prev-arrow.png') no-repeat center;
+    background: transparent;
+    background-position: 0 -100px;
+    transition: 0.4s;
     background-size: cover;
     width: 40px;
     height: 40px;
     z-index: 1;
 }
+
+.team .slick-prev:hover{
+    background: url('../../img/prev-arrow.png') no-repeat center;
+    background-size: cover;
+    transition: 0.4s;
+    width: 40px;
+    height: 40px;
+    z-index: 1;
+}
+
+
 .team .slick-next::before{
     content: '';
     width: 40px;
@@ -127,11 +151,13 @@
     position: absolute;
     opacity: 0;
     transition: 0.4s;
+    bottom: -50px;
 }
 
  .team .slick-prev::before{
     content: '';
     width: 40px;
+    bottom: -50px;
     height: 40px;
     background: url('../../img/prev-arrow-hover.png') no-repeat center;
     display: block;
@@ -142,6 +168,9 @@
     z-index: 1;
     opacity: 0;
     transition: 0.4s;
+}
+.team .slick-next:hover::before,  .team .slick-prev:hover::before{
+    bottom: -8px;
 }
 
 .team .slick-next:hover::before, .team .slick-prev:hover::before{
@@ -199,6 +228,14 @@ body .slick-prev:focus, body .slick-prev:hover{
 }
 
 @media (max-width: 767.98px){
+    .team .slick-next:hover, .team .slick-prev:hover{
+        background: transparent;
+        height: 38px;
+        color: #797979;
+    }
+    .team .slick-next:hover span, .team .slick-prev:hover span{
+        color: #797979;
+    }
     .team_slide{
         margin: 20px;
     }
