--- a/src/App.css
+++ b/src/App.css
@@ -57,9 +57,13 @@ body {
 }
 
 /* Элементы a, у которых нет класса, сбрасываем до дефолтных стилей */
- a:not([class]) {
+ a:not([class]){
   -webkit-text-decoration-skip: ink;
           text-decoration-skip-ink: auto;
+}
+
+a{
+  text-decoration: none;
 }
 
 /* Упрощаем работу с изображениями */
