--- a/src/components/Team/Team.css
+++ b/src/components/Team/Team.css
@@ -21,16 +21,16 @@
     transition: 0.4s;
     opacity: 0;
 }
-.team_slide_wrapper:hover::before{
+/* .team_slide_wrapper:hover::before{
     content: '';
     transition: 0.4s;
     opacity: 1;
-}
+} */
 
 .team_slide{
     position: relative;
-    padding: 20px 15px 40px;
-    margin: 30px;
+    padding: 15px;
+    margin: 30px 22px;
     border: 1px solid #797979;
     border-top-right-radius:28px;
     border-bottom-left-radius:28px;
@@ -38,11 +38,33 @@
     -webkit-backdrop-filter: blur(5px);
             backdrop-filter: blur(5px);
             z-index: 2;
+            height: 350px;
 }
 
 .team .title{
     max-width: 300px;
     margin: 40px auto;
+}
+
+.team_slide div a{
+    position: absolute;
+    top: -1px;
+    right: -25px;
+    background: rgba(255, 255, 255, 0.2);
+    border: 1px solid #797979;
+    box-sizing: border-box;
+    -webkit-backdrop-filter: blur(12px);
+            backdrop-filter: blur(12px);
+    padding: 10px 20px;
+    border-top-right-radius:28px;
+    border-bottom-left-radius:28px;
+    transition: 0.4s;
+    cursor: pointer;
+}
+
+.team_slide div a:hover{
+    background: linear-gradient(180deg, #5419E3 0%, #39CCFC 100%);
+    transition: 0.4s
 }
 
 
@@ -55,8 +77,6 @@
 }
 
 .team_slide div{
-    display: flex;
-    justify-content: space-between;
     margin-top: 20px;
 }
 
@@ -64,16 +84,15 @@
     font-family: Poppins;
     font-style: normal;
     font-weight: 500;
-    font-size: 20px;
+    font-size: 18px;
     line-height: 20px;
-    display: flex;
-    align-items: center;
+    text-align: center;
     color: #000000;
     margin: 0;
     transition: 0.4s;
 }
 
-.team_slide_wrapper:hover div h6, .dark .team_slide_wrapper div h6 {
+ .dark .team_slide_wrapper div h6 {
     color: #fff;
     transition: 0.4s;
 }
@@ -86,15 +105,22 @@
     line-height: 20px;
     color: #000000;
     transition: 0.4s;
+    text-align: center;
+    display: block;
+    margin-top: 10px;
 }
-.team_slide_wrapper:hover .team_slide span, .dark .team_slide_wrapper .team_slide span {
+
+.team_slide span.askar{
+    font-size: 14px;
+}
+ .dark .team_slide_wrapper .team_slide span {
     color: #fff;
     transition: 0.4s;
 }
 .team_slide_wrapper .team_slide svg path{
     transition: 0.4s;
 }
-.team_slide_wrapper:hover .team_slide svg path, .dark .team_slide_wrapper .team_slide svg path{
+ .dark .team_slide_wrapper .team_slide svg path{
     transition: 0.4s;
     fill: #fff;
 }
@@ -173,8 +199,8 @@
 .team .slick-next:hover::before, .team .slick-prev:hover::before{
     opacity: 0.8;
     transition: 0.4s;
-    top:12px;
-    left:5px;
+    top: 8px;
+    left: 3px;
 }
 
 .team .slick-next span, .team .slick-prev span{
@@ -218,6 +244,9 @@ body .slick-prev:focus, body .slick-prev:hover{
     .team_slide_wrapper::before{
         width: 180px;
     }
+    .team_slide{
+        padding: 10px;
+    }
 }
 
 @media (max-width: 991.98px){
@@ -236,7 +265,7 @@ body .slick-prev:focus, body .slick-prev:hover{
         color: #797979;
     }
     .team_slide{
-        margin: 20px;
+        margin: 20px 27px;
     }
 
     .team .title{
@@ -301,16 +330,19 @@ body .slick-prev:focus, body .slick-prev:hover{
         top: 100%;
         height: 38px;
     }
+    .team .slick-next:hover, .team .slick-prev:hover{
+         margin-top: 0;
+    }
     .team .slick-next {
         right: 50%;
         border: 2px solid #797979;
-        transform: translateX(288%);
+        transform: translateX(364%);
         border-top-right-radius: 20px;
         border-bottom-right-radius: 20px;
     }
     .team .slick-prev {
         left: 50%;
-        transform: translateX(-288%);
+        transform: translateX(-364%);
         border: 2px solid #797979;
         border-top-left-radius: 20px;
         border-bottom-left-radius: 20px;
@@ -338,17 +370,18 @@ body .slick-prev:focus, body .slick-prev:hover{
 
 @media (max-width: 575.98px){
    
-    .team_slide_wrapper:hover::before {
-        content: '';
-        transition: 0.4s;
-        opacity: 1;
-        width: 7%;
-        height: 265px;
-    }
+
     .team_slide {
         padding: 10px;
-        margin: 10px 5px;
+        margin: 10px 20px 10px 10px;
+            height: 330px;
     }
+    .team_slide div a{
+        right: -15px;
+        padding: 10px 15px;
+    }
+
+    
     
 
     
@@ -369,4 +402,16 @@ body .slick-prev:focus, body .slick-prev:hover{
 .team_slide_wrapper:hover::before {
         height: 45%;
     }
+
+    .team_slide span, .team_slide span.askar{
+    margin-top: 12px;
+    font-size: 11px;
+    line-height: 15px;
+}
+
+.team_slide {
+    padding: 10px 5px;
+    margin: 10px 15px 10px 10px;
+    height: 300px;
+}
 }
