--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -53,8 +53,14 @@ header {
 .nft_collapse{
   position: absolute;
   margin-top: 20px;
+  background: #141233;
+  padding-bottom: 10px;
 }
 
+
+.nft_collapse a{
+  padding-top: 10px;
+}
 
 .header_left_menu a:hover{
   transition: 0.4s;
