--- a/src/components/MainBlock/MainBlock.css
+++ b/src/components/MainBlock/MainBlock.css
@@ -48,7 +48,7 @@
 
 .left_slider {
     display: flex;
-    margin-top: 60px;
+    margin-top: 35px;
     background: #FFFFFF;
     position: relative;
     z-index: 5;
@@ -77,6 +77,7 @@
     text-shadow: 0px 0px 4px #FFFFFF;
     margin: 15px;
     width: 20%;
+    white-space: nowrap;
 }
 
 
@@ -103,32 +104,77 @@
     z-index: 5;
     width:80%;
     margin-left: 0px;
+    left: 40px;
 }
 .main_small_slide{
     position: relative;
     z-index: 6;
+    height: 66px;
+    background: #fff;
+}
+
+.dark .main_small_slide{
+        background: #2B0C61;
+}
+
+.main_small_slide div{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 66px;
+}
+
+.main_small_slide div span{
+    color: #000;
+    font-family: Poppins;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 20px;
+    line-height: 30px;
+    color: #040404;
+    margin-left: 10px;
+}
+
+.dark .main_small_slide div span{
+    color: #fff;
 }
 
 .right_small_slider .slick-prev,  .left_slider .slick-prev{
-    display: none !important;
+     height: 66px;
+    width: 40px;
+    cursor: pointer;
+    background: #3900FF !important;
+    left: -40px;
+    top: 33px;
+    top: 0px;
+    cursor: pointer;
+    transform: rotate(
+180deg
+);
 }
 
 .right_small_slider .slick-next, .left_slider .slick-next{
     height: 66px;
-    width: 66px;
+    width: 40px;
     cursor: pointer;
     background: #3900FF !important;
-    right: -66px;
+    right: -40px;
     top: 33px;
     cursor: pointer;
 }
 .right_small_slider .slick-next::before, .left_slider .slick-next::before{
     content: '\2794' !important;
     font-size: 32px;
+    line-height: 12px;
+}
+
+.right_small_slider .slick-prev::before{
+    content: '\2794' !important;
+     font-size: 32px;
     line-height: 32px;
 }
 .main_small_slide img{
-    height: 66px;
+    
 }
 
 .left_slide_wrapper{
@@ -413,6 +459,20 @@
   .main_block_main_left, .main_block_main_right{
       width: 100%;
   }
+
+  .main_block_main_right{
+      overflow:initial;
+  }
+
+  .right_small_slider {
+    position: absolute;
+    bottom: -75px;
+    z-index: 13;
+    width: 83%;
+    /* margin: 0 auto; */
+    /* margin-left: 0px; */
+    left: 57px;
+}
   .main_block_sliders{
       width: 100%;
   }
@@ -431,21 +491,16 @@
         margin: 0 auto;
     } */
     .left_slider {
-        margin-top: 700px;
+       display: none;
     }
     .main_block_main_right{
-        position: absolute;
-        bottom: 90px;
-        width: 87%;
-        margin: 0 auto;
-        left: 50%;
-        transform: translateX(-50%);
+        margin: 40px auto 80px;
     }
     .main_block {
         background-size: 70%;
     }
     .right_small_slider .slick-next{
-        right: 0;
+        right: -40px;
     }
     .left_slider .slick-next{
         right: 0;
@@ -513,6 +568,10 @@
 .left_slide div {
     padding-right: 50px;
 }
+
+ .right_small_slider {
+     left: 40px;
+ }
 }
 
 
@@ -531,13 +590,23 @@
     width: 25px;
 }
 
+.right_small_slider{
+    left: 40px;
+    max-width: 80%;
+}
+
+.main_small_slide div span{
+    font-size: 16px;
+    line-height: 16px;
+}
+
 }
 @media (max-width: 450.98px){
        .left_slider {
         margin-top: 400px;
     }
     .right_small_slider{
-        width: 90%;
+        max-width: 76%;
     }
 }
 
