--- a/src/components/MainInfo/MainInfo.css
+++ b/src/components/MainInfo/MainInfo.css
@@ -107,11 +107,13 @@
 .main_info_right div{
     display: flex;
     justify-content: flex-end;
+   align-items: flex-end;
 }
 
 .main_info_right div img{
-    max-width: 300px;
-    margin-top: 20px;
+    width: 220px;
+    height: 146px;
+    margin-right: -60px;
 }
 .main_info .main_info_left .title{
         display: none;
@@ -128,8 +130,7 @@
         padding: 60px 0 50px 50px;
     }
     .main_info_right div img {
-    max-width: 270px;
-
+        margin-right: -30px;
     }
 }
 
@@ -154,6 +155,9 @@
     }
     .main_info_right div img {
         margin-top: -60px;
+    }
+    .main_info_right div{
+        justify-content: flex-start;
     }
     
 
@@ -229,7 +233,15 @@
 
 @media (max-width: 575.98px){
     .main_info_right div img{
-        max-width: 40%;
+        position: absolute;
+        max-width: 35%;
+        height: auto;
+        right: 5%;
+        top: 95%;
+    }
+
+    .main_info_right{
+        position: relative;
     }
     .main_info_right .check_faq_button {
         margin-top: 20px;
