--- a/src/components/SoonPopup/Popup.css
+++ b/src/components/SoonPopup/Popup.css
@@ -1,6 +1,6 @@
 .popup {
   position: fixed;
-  z-index: 10000;
+  z-index: 100000;
   width: 100%;
   top: 0;
   transform: scale(0);
@@ -40,33 +40,36 @@
   width: 0;
 }
 
-.popup-wrapper.timer_popup .main-popup{
-  width: auto;
-  background: #E6EDFF;
-  border-radius: 24px;
-  
-  border: 1px solid;
-
-border-image-source: linear-gradient(180deg, #521AE1 0%, #37D1FA 100%);
-
-
+.popup-wrapper.soon_popup .main-popup{
+   background: url('../../img/soon_popup_bg.png') no-repeat center;
+  background-size: contain;
+  border: none;
+  height: 404px;
+  width: 740px;
 }
 
-.dark .popup-wrapper.timer_popup .main-popup{
-  background: #050D31;
-  border: 2px solid #151236;
+.dark .popup-wrapper.soon_popup .main-popup {
+  background: url('../../img/soon_popup_bg_dark.png') no-repeat center;
+  background-size: contain;
+  border: none;
+  overflow: auto;
+} 
+
+.popup-wrapper.timer_popup.soon_popup .close{
+  right: 9%;
+    top: 16%;
 }
 
-.popup-wrapper.timer_popup .close{
-  right: 30px;
-  top:30px;
-}
 
-
-.popup-wrapper.timer_popup .main-popup .popup-main{
+.popup-wrapper.timer_popup.soon_popup .main-popup .popup-main{
   display: flex;
   flex-direction: column;
-  padding: 50px;
+  justify-content: center;
+  align-items: center;
+  padding: 0px;
+  height: 404px;
+  width: 500px;
+  margin: 0 auto;
 }
 
 .popup-wrapper.timer_popup .main-popup .popup-main.soon h4{
@@ -99,7 +102,8 @@ border-image-source: linear-gradient(180deg, #521AE1 0%, #37D1FA 100%);
   font-size: 20px;
   line-height: 30px;
   color: #181818;
-  margin: 30px auto;
+  margin: 20px auto;
+  text-align: center;
 }
 
 .dark .popup-wrapper.timer_popup .main-popup .popup-main h6{
@@ -111,8 +115,8 @@ border-image-source: linear-gradient(180deg, #521AE1 0%, #37D1FA 100%);
   font-weight: normal;
   font-size: 18px;
   line-height: 27px;
-  color: #0057FF;
-  margin: 30px auto;
+  color: #00FFFF;
+  margin: 20px auto;
   text-align: center;
 }
 
@@ -125,7 +129,9 @@ border-image-source: linear-gradient(180deg, #521AE1 0%, #37D1FA 100%);
   justify-content: space-around;
   flex-direction: row;
   margin:  0 auto;
-  margin-top: 20px;
+  margin-top: 60px;
+  margin-bottom: -30px;
+  width: 50%;
 }
 
 
@@ -157,7 +163,8 @@ border-image-source: linear-gradient(180deg, #521AE1 0%, #37D1FA 100%);
 }
 
 .dark .popup-wrapper.timer_popup form input {
-  background: transparent;
+  background: rgba(168, 165, 165, 0.24);
+  color: #fff;
 }
 
 .popup-wrapper.timer_popup form button{
@@ -175,7 +182,7 @@ border-image-source: linear-gradient(180deg, #521AE1 0%, #37D1FA 100%);
     color: #FFFFFF;
     cursor: pointer;
     position: relative;
-    transition: 0.4s;
+    transition: opacity 0.4s;
     width: 140px;
     height: 50px;
     display: flex;
@@ -250,33 +257,104 @@ border-image-source: linear-gradient(180deg, #521AE1 0%, #37D1FA 100%);
 .popup-wrapper.timer_popup .main-popup {
   min-width:90% ;
 }
+
+.popup-wrapper.timer_popup.soon_popup .close {
+    right: 14%;
+    top: 16%;
+}
 }
 
 @media (max-width: 767.98px) {
+
+  .popup .soon .links{
+    margin-top: 30px;
+    width: 60%;
+  }
 
   .popup-wrapper.timer_popup form {
       flex-wrap: wrap;
   }
   .popup-wrapper.timer_popup form input {
       width: 100%;
-      font-size: 22px;
+      font-size: 18px;
   }
   .popup-wrapper.timer_popup form button{
       font-size: 20px;
-       margin: 30px 0 0 0;
+       margin: 10px 0 0 0;
   }
 
-  .popup-wrapper.timer_popup .main-popup .popup-main{
+.popup-wrapper.timer_popup .main-popup .popup-main{
     padding: 20px;
   }
+ .popup-wrapper.soon_popup .main-popup{
+    width: 90%;
+ }
+
+  .popup-wrapper.timer_popup.soon_popup .main-popup .popup-main{
+    width: 90%;
+  }
+
+  .popup-wrapper.timer_popup.soon_popup .close {
+    right: 10%;
+    top: 24%;
+}
 }
 
 @media (max-width: 575.98px) {
-  .main-popup {
+  .popup-wrapper.timer_popup.soon_popup .main-popup .popup-main
+{
+  padding: 0 20px;
+}  
+
+.popup .soon .links svg{
+  width: 30px;
+}
+
+
+
+.main-popup {
     width: 310px;
   }
   .close {
     right: 10px;
     top: 15px;
+  }
+
+  .popup .soon .links{
+    margin-top: 20px;
+        margin-bottom: -20px;
+  }
+
+  .popup-wrapper.timer_popup .main-popup .popup-main.soon h4{
+    font-size: 20px;
+    line-height: 22px;
+  }
+
+  .popup-wrapper.timer_popup.soon_popup .close {
+    right: 10%;
+    top: 29%;
+  }
+}
+
+
+@media (max-width: 470.98px) {
+
+  .popup-wrapper.timer_popup.soon_popup .close svg{
+    width: 12px;
+  }
+  .popup-wrapper.timer_popup.soon_popup .close {
+    right: 10%;
+    top: 34%;
+  }
+}
+
+@media (max-width: 370.98px) {
+
+  .popup-wrapper.timer_popup.soon_popup .close svg{
+    width: 12px;
+  }
+  .popup-wrapper.timer_popup.soon_popup .close {
+    right: 10%;
+    top: 38%;
   }
 }
