--- a/src/components/TimerPopup/Popup.css
+++ b/src/components/TimerPopup/Popup.css
@@ -40,22 +40,19 @@
   width: 0;
 }
 
-.popup-wrapper.timer_popup .main-popup{
-  width: auto;
-  background: #E6EDFF;
-  border-radius: 24px;
-  
-  border: 1px solid;
-
-border-image-source: linear-gradient(180deg, #521AE1 0%, #37D1FA 100%);
-
-
+.popup-wrapper.soon_popup.timer .main-popup{
+   background: url('../../img/newsletter_bg.png') no-repeat center;
+  background-size: contain;
+  border: none;
+  height: 404px;
+  width: 740px;
 }
 
-.dark .popup-wrapper.timer_popup .main-popup{
-  background: #050D31;
-  border: 2px solid #151236;
-}
+.dark .popup-wrapper.soon_popup.timer .main-popup {
+  background: url('../../img/newsletter_bg_dark.png') no-repeat center;
+  background-size: contain;
+  border: none;
+} 
 
 .popup-wrapper.timer_popup .close{
   right: 30px;
@@ -97,7 +94,7 @@ border-image-source: linear-gradient(180deg, #521AE1 0%, #37D1FA 100%);
 .dark .popup-wrapper.timer_popup .main-popup .popup-main h6{
   color: #fff;
 }
-.popup-wrapper.timer_popup .main-popup .popup-main span{
+.popup-wrapper.timer_popup.timer .main-popup .popup-main span{
   font-family: Poppins;
   font-style: normal;
   font-weight: normal;
@@ -106,6 +103,10 @@ border-image-source: linear-gradient(180deg, #521AE1 0%, #37D1FA 100%);
   color: #0057FF;
   margin: 30px auto;
   text-align: center;
+}
+
+.dark .popup-wrapper.timer_popup.timer .main-popup .popup-main span{
+  color: #00FFFF;
 }
 
 .popup-wrapper.timer_popup .main-popup .popup-main form{
@@ -234,7 +235,39 @@ border-image-source: linear-gradient(180deg, #521AE1 0%, #37D1FA 100%);
 
 @media (max-width: 767.98px) {
 
-  .popup-wrapper.timer_popup form {
+  .popup-wrapper.soon_popup.timer .main-popup{
+    background: url('../../img/newsletter_bg_mobile.png') no-repeat center;
+    background-size: contain;
+    width: 100%;
+  }
+
+  .dark .popup-wrapper.soon_popup.timer .main-popup {
+    background: url('../../img/newsletter_bg_mobile_dark.png') no-repeat center;
+    background-size: contain;
+    width: 100%;
+  } 
+
+  .popup-wrapper.soon_popup.timer .main-popup{
+    width: 100%;
+    height: 100%;
+  }
+
+  .popup-wrapper.timer_popup.soon_popup.timer .main-popup .popup-main{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding: 0px;
+    height: 100%;
+    width: 65%;
+    margin: 0 auto;
+}
+
+.popup-wrapper.timer_popup.timer .main-popup .popup-main form{
+  
+}
+
+  .popup-wrapper.timer_popup form { 
       flex-wrap: wrap;
   }
   .popup-wrapper.timer_popup form input {
@@ -243,20 +276,114 @@ border-image-source: linear-gradient(180deg, #521AE1 0%, #37D1FA 100%);
   }
   .popup-wrapper.timer_popup form button{
       font-size: 20px;
-       margin: 30px 0 0 0;
+       margin: 10px 0 0 0;
   }
 
   .popup-wrapper.timer_popup .main-popup .popup-main{
     padding: 20px;
   }
+
+  .popup-wrapper.timer_popup.soon_popup.timer .close {
+    right: 17%;
+    top: 24%;
+  }
 }
 
 @media (max-width: 575.98px) {
+  .popup-wrapper.timer_popup.soon_popup.timer .close {
+    right: 17%;
+    top: 50%;
+    transform: translateY(-190px);
+  }
+
+   .popup-wrapper.timer_popup.timer .main-popup .popup-main h4{
+    font-size: 20px;
+    line-height: 22px;
+  }
+
+  .popup-wrapper.timer_popup.timer .main-popup .popup-main h6{
+    font-size: 16px;
+    line-height: 24px;
+    margin: 10px auto;
+  }
+  .popup-wrapper.timer_popup.timer .main-popup .popup-main span{
+    font-size: 14px;
+    line-height: 18px;
+  }
+  .popup-wrapper.timer_popup.soon_popup.timer .main-popup .popup-main{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding: 0px;
+    height: 100%;
+    width: 65%;
+    margin: 0 auto;
+  }
   .main-popup {
     width: 310px;
   }
   .close {
     right: 10px;
-    top: 15px;
+    top: 50%;
+    transform: translateY(-125px);
+  } 
+}
+
+@media (max-width: 520.98px) {
+  .popup-wrapper.timer_popup.soon_popup.timer .close {
+    right: 17%;
+    top: 50%;
+    transform: translateY(-170px);
+  }
+  
+  }
+
+@media (max-width: 475.98px) {
+  .popup-wrapper.timer_popup.soon_popup.timer .close {
+    right: 15%;
+    top: 50%;
+    transform: translateY(-150px);
+  }
+}
+
+
+@media (max-width: 400.98px){
+  .popup-wrapper.timer_popup.soon_popup.timer .close {
+    right: 15%;
+    top: 50%;
+    transform: translateY(-125px);
+  }
+
+  .popup-wrapper.timer_popup.soon_popup.timer .main-popup .popup-main{
+    width: 74%;
+  }
+  .popup-wrapper.timer_popup.timer form button {
+      font-size: 16px;
+      margin: 10px 0 0 0;
+      height: 36px;
+  }
+  .popup-wrapper.timer_popup.timer .main-popup .popup-main span{
+    margin: 7px auto;
+    font-size: 12px;
+    line-height: 15px;
+  }
+  .popup-wrapper.timer_popup.timer form input {
+    width: 100%;
+    font-size: 16px;
+}
+.popup-wrapper.timer_popup.timer .main-popup .popup-main h6 {
+    font-size: 16px;
+    line-height: 22px;
+    margin: 5px auto;
+}
+}
+
+
+@media (max-width: 350.98px){
+  .popup-wrapper.timer_popup.soon_popup.timer .close {
+    right: 15%;
+    top: 50%;
+    transform: translateY(-110px);
   }
 }
