--- a/src/components/Tokenomics/Tokenomics.css
+++ b/src/components/Tokenomics/Tokenomics.css
@@ -10,19 +10,18 @@
 
 
 .tokenomics h4{
-    font-family: Poppins;
-    font-style: normal;
-    font-weight: 600;
-    font-size: 22px;
-    line-height: 24px;
-    text-align: center;
-    color: #0075FF;
-    text-shadow: 0px 4px 4px rgba(86, 86, 86, 0.25);
+font-family: Poppins;
+font-style: normal;
+font-weight: 500;
+font-size: 20px;
+line-height: 22px;
+text-align: center;
+color: #0075FF;
 }
 
 .tokenomics h4 span{
     transition: 0.4s;
-    color: #2A00A7;
+    color: #00FFF0;
 }
 
 .dark .tokenomics h4 span{
