--- a/src/components/MainHow/MainHow.css
+++ b/src/components/MainHow/MainHow.css
@@ -1,5 +1,5 @@
 .main_how{
-    padding: 50px 0;
+    padding: 50px 0 40px 0;
     background: url('../../img/mian_bg_nft.png') no-repeat center;
     background-size: contain;
 }
