--- a/src/components/MainInfo/MainInfo.css
+++ b/src/components/MainInfo/MainInfo.css
@@ -1,5 +1,5 @@
 .main_info{
-    padding: 80px 0;
+    padding: 40px 0 30px 0;
     background: url('../../img/nft_bg.png') no-repeat right ;
     background-size: contain;
     position: relative;
