add collapse bg1

--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -34,6 +34,8 @@ header {
     margin: 0 10px;
     transition: 0.4s;
     display: inline;
+    position: relative;
+    z-index: 3;
 }
 
 .ReactCollapse--collapse {
@@ -52,7 +54,7 @@ header {
 
 .nft_collapse{
   position: absolute;
-  margin-top: 20px;
+  margin-top: 5px;
   background: url('../../img/collapse_bg.png') no-repeat center;
   
   padding: 0;
@@ -62,9 +64,10 @@ header {
 }
 
 .nft_collapse.active{
-  height: 90px;
-  transition: 0.2s;
-  padding: 15px 10px 15px 0;
+    height: 120px;
+    transition: 0.2s;
+    width: 180px;
+    padding: 20px 10px 15px 0;
 }
 
 .dark .nft_collapse{
@@ -74,7 +77,7 @@ header {
 
 
 .nft_collapse a{
-  padding-left: 5px;
+  padding: 5px 0 0 10px;
 }
 
 .header_left_menu a:hover{
